syntax = "proto3";

import "google/protobuf/timestamp.proto";

service FriendListProto {
  rpc getFriendsByUserId(UserId) returns (GetFriendListsResponseDto);
  rpc areUsersFriends(AreUsersFriendsRequestDto) returns (AreUsersFriendsResponseDto);
  rpc addFriend(CreateFriendListDto) returns (FriendList);
  rpc removeFriend(FriendListId) returns (DeleteFriendListResponseDto);
}

message UserId {
  string id = 1;
}

message AreUsersFriendsRequestDto {
  string id = 1;
  string userId = 2;
}

message AreUsersFriendsResponseDto {
  bool success = 1;
}

message GetFriendListsResponseDto {
  repeated FriendList friends = 1;
}

message DeleteFriendListResponseDto {
  bool success = 1;
}

message FriendListId {
  string id = 1;
}

message CreateFriendListDto {
    string requesterId = 1;
    string addresseId = 2;
    string friendType = 3;
}

message FriendList {
  string id = 1;
  string requesterId = 2;
  string addresseId = 3;
  string friendType = 4;
  google.protobuf.Timestamp createdAt = 5;
  google.protobuf.Timestamp updatedAt = 6;
}

  